--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ miette = { version = "7.5", features = ["fancy"] }
 serde = { version = "1", features = ["derive"] }
 toml = "0.8"
 anstyle = "1.0"
+upon = "0.9.0"
