--- a/hypr/hyprgraphics.toml
+++ b/hypr/hyprgraphics.toml
@@ -1,4 +1,4 @@
-version = { specific = "0.1.2" }
+version = { specific = "0.1.2-1" }
 dependencies = [
     "/shared/deb-latest/hyprutils.deb",
     "libpixman-1-dev",
