--- a/layer-shell.toml
+++ b/layer-shell.toml
@@ -6,13 +6,16 @@ dependencies = [
     "libdbus-1-dev",
     "libssl-dev",
     "libgtkmm-4.0-dev",
-    "clang",
+    "g++",
     "meson",
     "ninja-build",
-    "just",
+    "sassc",
+    "xxd",
+    "cbindgen",
 ]
 arch = "amd64"
 path = ["/root/.cargo/bin"]
+env = { "CXX" = "g++" }
 
 [source.git-clone]
 url = "https://github.com/iliabylich/layer-shell.git"
@@ -28,7 +31,7 @@ dependencies = ["${shlibs:Depends}", "fonts-inter-variable"]
 
 [debian.rules]
 "%" = ["dh $@"]
-override_dh_auto_configure = ["just setup release"]
-override_dh_auto_build = ["echo skip"]
-override_dh_auto_install = ["just install $$PWD/debian/layer-shell"]
-override_dh_usrlocal = ["echo skip"]
+override_dh_auto_configure = [
+    "meson setup builddir --buildtype=release --prefix=$$PWD/debian/layer-shell",
+]
+override_dh_auto_install = ["meson install -C builddir"]
