--- a/ghostty.toml
+++ b/ghostty.toml
@@ -14,7 +14,7 @@ post_clone_scripts = [
 
 [debian]
 changelog = true
-compat = { version = 10 }
+compat = 10
 
 [debian.control]
 description = "Ghostty is a fast, feature-rich, and cross-platform terminal emulator that uses platform-native UI and GPU acceleration."
