--- a/hypr/hyprland.toml
+++ b/hypr/hyprland.toml
@@ -41,7 +41,7 @@ branch_or_tag = "v0.48.0"
 
 [debian]
 changelog = true
-compat = { version = 10 }
+compat = 10
 
 [debian.control]
 description = "Hyprland is an independent, highly customizable, dynamic tiling Wayland compositor that doesn't sacrifice on its looks."
