--- a/hypr/hyprcursor.toml
+++ b/hypr/hyprcursor.toml
@@ -16,7 +16,7 @@ branch_or_tag = "v0.1.12"
 
 [debian]
 changelog = true
-compat = { version = 10 }
+compat = 10
 
 [debian.control]
 description = "The hyprland cursor format, library and utilities."
