--- a/hypr/hyprland-protocols.toml
+++ b/hypr/hyprland-protocols.toml
@@ -8,7 +8,7 @@ branch_or_tag = "v0.6.2"
 
 [debian]
 changelog = true
-compat = { version = 10 }
+compat = 10
 
 [debian.control]
 description = "Wayland protocol extensions for Hyprland"
