--- a/hypr/hyprland-qt-support.toml
+++ b/hypr/hyprland-qt-support.toml
@@ -15,7 +15,7 @@ branch_or_tag = "v0.1.0"
 
 [debian]
 changelog = true
-compat = { version = 10 }
+compat = 10
 
 [debian.control]
 description = "A qml style provider for hypr* qt apps"
