--- a/hypr/hyprland-qtutils.toml
+++ b/hypr/hyprland-qtutils.toml
@@ -29,7 +29,7 @@ branch_or_tag = "v0.1.3"
 
 [debian]
 changelog = true
-compat = { version = 10 }
+compat = 10
 
 [debian.control]
 description = "Hyprland QT/qml utility apps"
