--- a/hypr/hyprlock.toml
+++ b/hypr/hyprlock.toml
@@ -26,7 +26,7 @@ branch_or_tag = "v0.7.0"
 
 [debian]
 changelog = true
-compat = { version = 10 }
+compat = 10
 
 [debian.control]
 description = "Hyprland's GPU-accelerated screen locking utility"
