--- a/hypr/hyprsysteminfo.toml
+++ b/hypr/hyprsysteminfo.toml
@@ -19,7 +19,7 @@ branch_or_tag = "v0.1.3"
 
 [debian]
 changelog = true
-compat = { version = 10 }
+compat = 10
 
 [debian.control]
 description = "A tiny qt6/qml application to display information about the running system"
