--- a/hypr/plugins/hyprspace.toml
+++ b/hypr/plugins/hyprspace.toml
@@ -25,7 +25,7 @@ branch_or_tag = "main"
 
 [debian]
 changelog = true
-compat = { version = 10 }
+compat = 10
 
 [debian.control]
 description = "Workspace overview plugin for Hyprland"
