--- a/mangl.toml
+++ b/mangl.toml
@@ -14,7 +14,7 @@ branch_or_tag = "v1.1.5"
 
 [debian]
 changelog = true
-compat = { version = 10 }
+compat = 10
 
 [debian.control]
 description = "An enhanced man page viewer for linux and BSD systems based on OpenGL and mandoc libraries"
