--- a/satty.toml
+++ b/satty.toml
@@ -14,7 +14,7 @@ branch_or_tag = "v0.16.0"
 
 [debian]
 changelog = true
-compat = { version = 10 }
+compat = 10
 
 [debian.control]
 description = "Satty - Modern Screenshot Annotation. A tool inspired by Swappy and Flameshot."
