--- a/unsplash-wallpaper.toml
+++ b/unsplash-wallpaper.toml
@@ -8,7 +8,7 @@ branch_or_tag = "v1.0.1"
 
 [debian]
 changelog = true
-compat = { version = 10 }
+compat = 10
 
 [debian.control]
 description = "A tiny tool to download multiple images from Unsplash API in parallel"
