--- a/xremap.toml
+++ b/xremap.toml
@@ -8,7 +8,7 @@ branch_or_tag = "v0.10.4"
 
 [debian]
 changelog = true
-compat = { version = 10 }
+compat = 10
 
 [debian.control]
 description = "Key remapper for X11 and Wayland"
