--- a/hypr/hyprcursor.toml
+++ b/hypr/hyprcursor.toml
@@ -1,4 +1,4 @@
-version = { specific = "0.1.12" }
+version = { specific = "0.1.12-1" }
 dependencies = [
     "/shared/deb-latest/hyprutils.deb",
     "/shared/deb-latest/hyprlang.deb",
