--- a/hypr/hyprland-qtutils.toml
+++ b/hypr/hyprland-qtutils.toml
@@ -1,4 +1,4 @@
-version = { specific = "0.1.3-2" }
+version = { specific = "0.1.4" }
 dependencies = [
     "/shared/deb-latest/hyprutils.deb",
 
@@ -25,7 +25,7 @@ arch = "amd64"
 
 [source.git-clone]
 url = "https://github.com/hyprwm/hyprland-qtutils.git"
-branch_or_tag = "v0.1.3"
+branch_or_tag = "v0.1.4"
 
 [debian]
 changelog = true
