--- a/hypr/hyprlock.toml
+++ b/hypr/hyprlock.toml
@@ -1,4 +1,4 @@
-version = { specific = "0.7.0-1" }
+version = { specific = "0.8.2" }
 dependencies = [
     "/shared/deb-latest/hyprutils.deb",
     "/shared/deb-latest/hyprlang.deb",
@@ -22,7 +22,7 @@ arch = "amd64"
 
 [source.git-clone]
 url = "https://github.com/hyprwm/hyprlock.git"
-branch_or_tag = "v0.7.0"
+branch_or_tag = "v0.8.2"
 
 [debian]
 changelog = true
