--- a/metapackage.toml
+++ b/metapackage.toml
@@ -62,6 +62,7 @@ dependencies = [
     "automake",
     "xxd",
     "clang-tidy",
+    "blueprint-compiler",
 
     # CLI
     "hugo",
@@ -108,6 +109,7 @@ dependencies = [
     "iputils-ping",
     "lsb-release",
     "network-manager",
+    "x11-utils",
 
     # Libs
     "libjemalloc-dev",
@@ -117,6 +119,7 @@ dependencies = [
     "libpipewire-0.3-dev",
     "libdbus-1-dev",
     "libssl-dev",
+    "libclang-rt-dev",
 
     # Debian
     "apt-file",
