--- a/.github/workflows/rebuild-builder-bin.yml
+++ b/.github/workflows/rebuild-builder-bin.yml
@@ -22,6 +22,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - run: sudo apt update
+      - run: sudo apt install podman
+
+      - run: podman --version
+
       - uses: dtolnay/rust-toolchain@stable
       - run: cargo build --release
 
@@ -34,7 +39,7 @@ jobs:
           artifacts: target/release/build-deb-package
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      - run: docker build . --file Dockerfile --tag $IMAGE_NAME --label "runnumber=$GITHUB_RUN_ID"
-      - run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-      - run: docker tag $IMAGE_NAME $IMAGE_ID:latest
-      - run: docker push $IMAGE_ID:latest
+      - run: podman build . --file Dockerfile --tag $IMAGE_NAME --label "runnumber=$GITHUB_RUN_ID"
+      - run: echo "${{ secrets.GITHUB_TOKEN }}" | podman login ghcr.io -u ${{ github.actor }} --password-stdin
+      - run: podman tag $IMAGE_NAME $IMAGE_ID:latest
+      - run: podman push $IMAGE_ID:latest
